@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_cover);
-use Test::More 'tests' => 11;
+use Test::More 'tests' => 12;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -55,3 +55,7 @@ is($ret, 'hardback', encode_utf8("Cover '$input_cover' after cleanup."));
 $input_cover = decode_utf8('(vázáno)');
 $ret = clean_cover($input_cover);
 is($ret, 'hardback', encode_utf8("Cover '$input_cover' after cleanup."));
+
+# Test.
+$ret = clean_cover(undef);
+is($ret, undef, 'Undefined cover after cleanup.');
