@@ -2,6 +2,7 @@
  - Add Přelouč to publishing places cleanup.
  - Add edition number use case.
  - Add publisher place use case.
+ - Add test for clean_cover().
  - Add verbose parameter.
  - Fix test messages in clean_cover().
 
